fix: OpenSearch updates

--- a/docs/developer-docs/5.39.x/performance-and-load-benchmark/headless-cms/performance-tuning.mdx
+++ b/docs/developer-docs/5.39.x/performance-and-load-benchmark/headless-cms/performance-tuning.mdx
@@ -14,6 +14,12 @@ import { Alert } from "@/components/Alert";
 
 </Alert>
 
+<Alert type={"info"}>
+
+  Note that this article was written when Webiny was using Amazon Elasticsearch Service as its search engine of choice. And although with the 5.39.0 release Webiny [started using Amazon OpenSearch Service](/docs/release-notes/5.39.0/changelog#introducing-support-for-amazon-open-search-service-3612), this article is still relevant as the configuration options outlined here are still applicable.
+
+</Alert>
+
 ## About
 
 Webiny, being built on top of a serverless infrastructure, takes the advantage of the auto-scale capabilities many of the serverless services provide out of the box, saving you time, and stress in having to manage this yourself. However, not all components scale well, and sometimes it's the interaction between the components that might need adjustments. In this article we want to provide you with a list of things you should consider in advance before putting large workloads on top of Webiny, to ensure your users have a great experience.
