--- a/docs/developer-docs/shared/performance-and-load-benchmark/headless-cms/read-benchmark.mdx
+++ b/docs/developer-docs/shared/performance-and-load-benchmark/headless-cms/read-benchmark.mdx
@@ -13,6 +13,12 @@ import { Alert } from "@/components/Alert";
 
 </Alert>
 
+<Alert type={"info"}>
+
+  Note that these benchmarks were performed when Webiny was using Amazon Elasticsearch Service as its search engine of choice. And although with the 5.39.0 release Webiny [started using Amazon OpenSearch Service](/docs/release-notes/5.39.0/changelog#introducing-support-for-amazon-open-search-service-3612), this article is still relevant as the performance of the two services is very similar.
+
+</Alert>
+
 ## Results
 
 ![image](./assets/read-benchmark/summary.svg)
