feat: add a section on cookies

--- a/docs/release-notes/5.39.0/changelog.mdx
+++ b/docs/release-notes/5.39.0/changelog.mdx
@@ -90,12 +90,22 @@ After upgrading to 5.39.0, you won't notice any differences comparing to your cu
 
 <Alert type="info" title="What do I need to do?">
 
-  If you're just using Webiny without any customizations to the File Manager, just go through the
-  upgrade process, and you're good to go. 
-  
-  If you're generating files in the S3 bucket beyond what
-  Webiny does via its File Manager, then we recommend you get in touch with us, and describe your
-  use case, so we can provide guidance on how to configure the routing for your custom files.
+If you're just using Webiny without any customizations to the File Manager, just go through the
+upgrade process, and you're good to go.
+
+If you're generating files in the S3 bucket beyond what
+Webiny does via its File Manager, then we recommend you get in touch with us, and describe your
+use case, so we can provide guidance on how to configure the routing for your custom files.
+
+</Alert>
+
+### Improved API Security and Cookies
+
+To support certain advanced features, like [Private Files](#introducing-private-files), we now store the `idToken` into a `wby-id-token` cookie on the API domain, when a user logs into the Admin app. This allows us to perform authentication even without sending the `Authorization` header (which is not even possible when we talk about plain GET requests issued by the browser, and not AJAX requests). To make this possible, we had to tighten the configuration of headers on the OPTIONS request, and be very explicit about what headers we allow to be sent to the API.
+
+<Alert type="warning" title="Whitelist Custom Headers">
+
+All custom headers, if you have any, now need to be whitelisted! Drop us a line on Slack if you need to customize response headers, and we'll point you in the right direction.
 
 </Alert>
 
@@ -132,7 +142,6 @@ In this first iteration of the feature, a file can either be `public`, or `priva
 Prior to this release, the AWS Lambda functions that were used for exporting and importing Page Builder pages, blocks, and templates were using the default memory size of 128 MB. With this release, we've increased the memory size to 512 MB.
 
 This change was necessary because, in some cases, the default memory size was not enough to handle the export/import process, which resulted in the process failing.
-
 
 ### Fixed List of Actions Shown to Users ([#3825](https://github.com/webiny/webiny-js/pull/3825))
 
