refactor: background tasks

--- a/docs/developer-docs/5.39.x/core-development-concepts/background-tasks/about-background-tasks.mdx
+++ b/docs/developer-docs/5.39.x/core-development-concepts/background-tasks/about-background-tasks.mdx
@@ -20,16 +20,17 @@ import {WhatYouWillLearn} from "@/components/WhatYouWillLearn";
 
 </WhatYouWillLearn>
 
-## About
+## Overview
 
 In the 5.39.0 version of Webiny we have introduced a Background Task feature.
+
 This feature enables our users to run operations which take a long time to finish - more than available `15 minutes` maximum run time of the AWS Lambda.
 
 The Background Task run limit is `1 year`, from the time when the task is triggered, which is the maximum execution time for the `AWS Step Function`.
 
 This functionality uses the `AWS Event Bridge`, `AWS Step Function` and `AWS Lambda`.
 
-
+## AWS Services Used in the Background Tasks
 To find out more about these services, please visit the following links:
 - [`AWS Event Bridge`](https://docs.aws.amazon.com/eventbridge/latest/userguide/eb-what-is.html)
 - [`AWS Step Function`](https://docs.aws.amazon.com/step-functions/latest/dg/welcome.html)
