--- a/docs/developer-docs/5.39.x/core-development-concepts/background-tasks/built-in-background-tasks.mdx
+++ b/docs/developer-docs/5.39.x/core-development-concepts/background-tasks/built-in-background-tasks.mdx
@@ -16,9 +16,8 @@ import {WhatYouWillLearn} from "@/components/WhatYouWillLearn";
 
 <WhatYouWillLearn>
 
-- how Background Tasks work
-- how to define your own Background Task
-- what to be careful about
+- what are available built-in Background Tasks
+- how to run built-in Background Tasks
 
 </WhatYouWillLearn>
 
