--- a/docs/developer-docs/5.39.x/core-development-concepts/background-tasks/how-background-tasks-work.mdx
+++ b/docs/developer-docs/5.39.x/core-development-concepts/background-tasks/how-background-tasks-work.mdx
@@ -18,8 +18,8 @@ import backgroundTaskStepFunction from "./assets/bg-task-step-function.png";
 <WhatYouWillLearn>
 
 - how Background Tasks work
-- what are the states in our Step Function
-- what does each state do
+- what are the states in Background Task Step Function
+- what is the functionality of each state
 
 </WhatYouWillLearn>
 
@@ -28,7 +28,7 @@ import backgroundTaskStepFunction from "./assets/bg-task-step-function.png";
 
 A Background Task lifecycle is as follows:
 
-1. A user triggers the task either via [GraphQL API mutation](#trigger-a-background-task) or via the [code](#).
+1. A user triggers the task either via [GraphQL API mutation](/docs/{version}/core-development-concepts/background-tasks/background-task-management#trigger-a-background-task) or via the [code](/docs/{version}/core-development-concepts/background-tasks/background-task-management#trigger-a-background-task).
 2. As soon as the task is triggered, Webiny sends an EventBridge Event with task information: task ID and task definition identifier.
 3. The EventBridge triggers the Step Function.
 4. The Step Function runs the Lambda function in a loop until the task is done.
@@ -170,4 +170,4 @@ locale: string;
 wait: number;
 ```
 
-Users should worry about the response structure as it is only used internally by the Background Task handler.
+Users should worry not about the response structure as it is only used internally by the Background Task handler.
