--- a/docs/developer-docs/5.39.x/core-development-concepts/background-tasks/how-to-define-a-background-task.mdx
+++ b/docs/developer-docs/5.39.x/core-development-concepts/background-tasks/how-to-define-a-background-task.mdx
@@ -1,6 +1,6 @@
 ---
 id: 8c6fo7e4
-title: How to define a Background Task
+title: How to Define a Background Task
 description: You will learn about Background Tasks, how to create new definitions, how to trigger them and how to handle the task run.
 ---
 
@@ -16,7 +16,9 @@ import {WhatYouWillLearn} from "@/components/WhatYouWillLearn";
 
 <WhatYouWillLearn>
 
+- difference between public and private Background Tasks
 - how to define your own Background Task
+- how to register your Background Task
 
 </WhatYouWillLearn>
 
@@ -24,8 +26,8 @@ import {WhatYouWillLearn} from "@/components/WhatYouWillLearn";
 ## Overview
 
 First, you need to know that there are two types of Background Tasks:
-- public ones - can be called via GraphQL API or the code
-- private ones - can be called only through the code
+- public - can be called via GraphQL API or the programmatic API
+- private - can be called only through the programmatic API
 
 Definition of the task is the same for both types of tasks, with a difference of the method name used to define the task.
 
@@ -36,7 +38,7 @@ To see all available properties, and information about the properties, for the t
 
 There are few properties, which should not be used:
  - `fields` - not implemented yet
- - `isPrivate` - set automatically when a user defines a test taks via `createPrivateTaskDefinition`
+ - `isPrivate` - set automatically when a user defines a task via `createPrivateTaskDefinition`
 
 ### Public Task
 ```typescript
@@ -107,7 +109,7 @@ Of course, as all other Webiny plugins, users must register the task definition 
 export const handler = createHandler({
     plugins: [
         // ...rest of plugins
-        myTaskDefinition
+        syncArticles
     ]
 });
 ```
