--- a/docs/developer-docs/5.39.x/core-development-concepts/background-tasks/how-to-handle-a-background-task-run.mdx
+++ b/docs/developer-docs/5.39.x/core-development-concepts/background-tasks/how-to-handle-a-background-task-run.mdx
@@ -1,6 +1,6 @@
 ---
 id: 8d6fo7e4
-title: How to handle a Background Task
+title: How to Handle a Background Task
 description: You will learn about Background Tasks, how to create new definitions, how to trigger them and how to handle the task run.
 ---
 
@@ -16,7 +16,9 @@ import {WhatYouWillLearn} from "@/components/WhatYouWillLearn";
 
 <WhatYouWillLearn>
 
--  how to handle the Background Task run
+- how to handle the Background Task run
+- what are available methods
+- how to log important information
 
 </WhatYouWillLearn>
 
@@ -287,6 +289,6 @@ It means that each of the execution iteration gets its own record, which contain
   
   The logs are stored in the database as you send them, and if you send a lot of logs, or large logs, you will hammer the database.
   
-  Use the logs only for important information, like starting or finishing a part of a task.
+  Use the built-in logs only for important information, like starting or finishing a part of a task.
 
 </Alert>
