--- a/docs/developer-docs/5.39.x/core-development-concepts/background-tasks/what-to-be-careful-about.mdx
+++ b/docs/developer-docs/5.39.x/core-development-concepts/background-tasks/what-to-be-careful-about.mdx
@@ -15,10 +15,9 @@ import {WhatYouWillLearn} from "@/components/WhatYouWillLearn";
 <CanIUseThis since={"5.39.0"} />
 
 <WhatYouWillLearn>
-
-- how Background Tasks work
-- how to define your own Background Task
+  
 - what to be careful about
+- limits of AWS Services
 
 </WhatYouWillLearn>
 
