fix: use "link" prop on existing "messages" articles

--- a/docs/messages/cloudwatch.mdx
+++ b/docs/messages/cloudwatch.mdx
@@ -1,8 +1,7 @@
 ---
 id: aafea9f8
 title: Accessing Amazon CloudWatch logs for AWS Lambda Functions
-//: null
-description: null
+description: Learn how to access Amazon Cloudwatch logs.
 ---
 
 import cwLogs from "./assets/cw-logs.png";
