--- a/docs/messages/lambda-edge-warning.mdx
+++ b/docs/messages/lambda-edge-warning.mdx
@@ -1,8 +1,7 @@
 ---
 id: aafea9f7
 title: Lambda@Edge function was not automatically deleted. Make sure to delete it manually.
-//: null
-description: null
+description: Learn about the nuances of Lambda@Edge function deletion.
 ---
 
 When Webiny's [multi-tenancy](/docs/enterprise/multi-tenancy) feature is enabled, as part of the **Website** project application, Webiny deploys an additional [Lambda@Edge](https://aws.amazon.com/lambda/edge/) function, which is used for additional multi-tenancy-related routing purposes.
