fix: use `my-123-prefix-` prefix

--- a/docs/release-notes/5.39.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.39.0/upgrade-guide.mdx
@@ -85,7 +85,7 @@ Ultimately, no matter if you're using the mentioned AWS CloudFormation template 
 Be careful with the `arn:aws:states:*:*:stateMachine:wby-*` resource and the last `wby-*` section. If you're using a
 custom Pulumi resource name prefix (set via `webiny.application.ts` files), you'll need to update this accordingly.
 
-For example, if using `my-123-prefix-` as the custom Pulumi resource name prefix, then the resource should be set to `arn:aws:states:*:*:stateMachine:wby-123-prefix-*`. So, instead of ending with `wby-*`, the resource now ends with `wby-123-prefix-*`.
+For example, if using `my-123-prefix-` as the custom Pulumi resource name prefix, then the resource should be set to `arn:aws:states:*:*:stateMachine:my-123-prefix-*`. So, instead of ending with `wby-*`, the resource now ends with `my-123-prefix-*`.
 
 For more information on custom Pulumi resource name prefixes, see [Pulumi Resource Name Prefixes](/docs/infrastructure/basics/modify-cloud-infrastructure#pulumi-resource-name-prefixes).
 
