--- a/docs/handbook/company/why-webiny-exists.mdx
+++ b/docs/handbook/company/why-webiny-exists.mdx
@@ -5,11 +5,29 @@ description: What's Webiny's mission and why we're building it?
 slug: why-webiny-exists
 ---
 
-## Our Mission
+## Our Purpose
 
-**Building the digital content platform modern enterprises want, and developers deserve.**
+**To set a standard for how online experiences are made, ensuring builders and creators are empowered by the tools they use.**
 
-Giving enterprises the means to take back control over their online experiences. 
+The thing is, the web is a messy place. We've been building websites and applications for close to two decades now. Things are not getting much better. There's a lack of a standard, there's too much focus on the wrong things, like which library is better, which framework, which cloud, which UI, ... and so on. No one is looking at the whole experience end to end, and that's where things are falling apart. At the end of the day what developers want is not to need to suffer through their day fighting with the tools they use. They want to be able to focus on the things that matter, like building great experiences for their users.
+
+On the other side, we have the content creators, the ones that use the tools that the developers produce. They are also in a tough spot. They need the tools to support them and not work against them. The tools must work, always, they must be fast and they must be secure. They must be able to create the experiences they want, not the ones that the tools allow them to create.
+
+By being in such a place, having a vertigo effect of the amount of frustrations we felt on both the developer as well as the content creator experience, we decided to do something about it. We decided to build Webiny.
+
+The purpose we aim to fulfill is one of allowing developers to focus on building great experiences without fighting the tools they use. And for content creators to enjoy their work by using the tools that enrich their creativity and not limit it. 
+
+
+## Our Mission 
+
+**Offer a platform with an exceptional experience for the creation of exceptional online experiences.**
+
+To fulfill our purpose, our mission is an ambitious one. It's not enough for us to provide just another library, another framework, an infrastructure solution, or a ready-made product. It won't work. Many tried that approach before and failed. 
+
+We need to provide a platform. A platform that is open, that is ultra-customizable, that is rooted in the first principles, and that respects the data ownership of the users. A platform that contains many ready-made applications, but that are composable. A platform where you can customize every single part of it in a maintainable way. Operating on an infrastructure type that is most reliable, scalable, secure, performs well under large workloads and comes at a low cost. 
+
+Our mission is timeless, things like user experience, performance, security and reliability are not going to change. They are the first principles of building great online experiences. Our approach to how we achieve this mission will probably evolve, but it will always stay relevant.
+
 
 ## Our strategy
 
