--- a/docs/handbook/company/how-we-make-users-happy.mdx
+++ b/docs/handbook/company/how-we-make-users-happy.mdx
@@ -26,3 +26,11 @@ The customers that work with us are in for the long run. They are looking for a 
 Not necessarily. We will only commit items to the roadmap that we believe will benefit the majority of our customers, we don't do one-offs. But we will always make sure that we understand your needs and that we are building the right things for you.
 
 In case we don't commit your item to the roadmap, we will always provide you with a solution that will get you unblocked. Typically this means adding new extension points, hooks and lifecycle events, followed by a set of tutorials that will enable your team to implement the feature themselves. We'll always have your back! 
+
+## A truly composable product
+
+There are many products on the market that use and practically abuse the word "composable" from the marketing side. You've got the legacy DXP platforms calling themselves composable, but the only composing you can do is within their product portfolio. 
+
+On the other end, you've got the newer SaaS options which are also trying to take the piece of the pie, while they are a single-purpose solution, and you have zero ability to extend it. You are limited to only a few options they provide to integrate with other tools. 
+
+Users don't want that anymore. They want to be able to pick and choose the best tools for their needs, and they want to be able to integrate them in a way that makes sense for them. We have built our product with that in mind. We've built it to be truly composable. We've built it to be the glue that holds all your tools together. 
